[package]
name = "code-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.16.3"
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["full"] }

whoami = "1.4.1"
os_info = "3.7.0"
reqwest =  { version = "0.11.22", features = ["blocking"] } 
serde = "1.0.192"
serde_json = "1.0.108"
chrono = "0.4.31"
directories = "5.0.1"
regex = "1.10.2"
derive_builder = "0.12.0"