[package]
name = "code-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.17.1"
futures = "0.3.29"
futures-core = "0.3.29"
futures-util = "0.3.29"
tokio = { version = "1.34.0", features = ["full"] }
async-stream = "0.3"

whoami = "1.4.1"
os_info = "3.7.0"
reqwest =  { version = "0.11.22"} 
serde = "1.0.193"
serde_json = "1.0.108"
# chrono = "0.4.31"
# directories = "5.0.1"
regex = "1.10.2"
derive_builder = "0.12.0"

anyhow = "1.0"
clap = { version = "4.4.8", features = ["derive"] }
rustyline = "13.0.0"
termimad = "0.26"
colored = "2"
viuer = "0.7.1"
base64 = "0.21.5"
image = "0.24.7"

clia-local-offset = "0.1"
time = { version = "0.3", features = ["macros"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["local-time", "env-filter", "fmt"] }

# pyo3 = { version = "0.20.0", features = ["extension-module"] }

syntect = { version = "5.1.0", default-features = false, features = ["default-fancy"]}
# rustpython = "0.3.0"
# jupyter-client = {path = "./jupyter-client-rs"}
jupyter-client = { git = "https://github.com/sxhxliang/jupyter-client-rs.git", branch = "dev" }
# rustpython = "0.3.0"
# [dependencies.pyo3]
# version = "0.20.0"
# features = ["auto-initialize"]


[profile.release]
# https://github.com/johnthagen/min-sized-rust
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
# indicatif
# # When using alpha-release, always use exact version, e.g. `version = "=0.x.y-alpha.z"
# # This is because we treat alpha-releases as incompatible, but semver doesn't.
# # In particular: if we compile AICommander 0.3.0-alpha.0 we only want it to use
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3